# Neuropsychologist

./: .env.example  README.md  pyproject.toml
scripts/: index_books.py
src/: dependencies.py  langfuse_client.py  main.py  settings.py
src/controllers/: __init__.py  openai_compat_controller.py
src/main_pipeline/: main_pipeline.py
src/routers/: __init__.py  openai_compat.py
src/schemas/: openai_compat.py
src/services/: llm_client.py  rag_service.py  reranker.py
